--- a/textalign.html
+++ b/textalign.html
@@ -9,14 +9,16 @@
 			}
 			
 			.font2 {
+				font-family: 'Noto Sans KR', sans-serif;
 				text-align: justify;
 				/* line-height: 0.9; */
 				/* line-height: 2; */
+				/*
 				line-height: 20px;
 				word-spacing: 10px; 
 				letter-spacing: 10px;
-				
-				font-weight: bold; 
+				*/
+				font-weight: 900;
 			}
 		</style>
 	</head>
