--- a/퍼블리싱/mobile_side/index.html
+++ b/퍼블리싱/mobile_side/index.html
@@ -13,7 +13,7 @@
 			<nav>
 				<ul>
 					<li>
-						<i class='xi-bars'></i>
+						<i class='xi-bars show_menu'></i>
 					</li>
 					<li><a href='#'>메뉴1</a></li>
 					<li><a href='#'>메뉴2</a></li>
@@ -26,8 +26,9 @@
 			<section>
 				사이트 내용
 			</section>
-			<aside>
-				사이트 메뉴
+			<aside class='side_menu'>
+				<i class='xi-close close_menu'></i>
+				사이드 메뉴
 			</aside>
 		</main>
 		<footer>
