--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -18,10 +18,38 @@
 			</div>
 			
 			<div class='logo_search'>
-				
+				<div class='inner layout_width'>
+					<div class='box icon_menu'>
+						<a href='#'><img src='img/nshop_live2.png'></a>
+						<a href='#'><img src='img/icon_loc.png'></a>
+						<a href='#'><img src='img/icon_air.png'></a>
+					</div>
+					<div class='box logo'>
+						<a href='#'><img src='img/logo.png'></a>
+					</div>
+					<div class='box search'>
+						<div class='form_wrap'>
+							<form method='GET' action='#'>
+								<input type='text' name='keyword'>
+								<input type="image" src="img/icon_search.png">
+							</form>
+						</div>
+					</div>
+				</div>
 			</div>
 		</header>
-		<nav></nav>
+		
+		<nav>
+			<ul>
+				<li>
+					<a href='#'>상업공간</a>
+				</li>
+				<li>
+					<a href='#'>전동시스템</a>
+				</li>
+			</ul>
+		</nav>
+		
 		<section>
 		
 		</section>
