--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="js/script.js"></script>
 		<title>코지샵 공식 온라인스토어</title>
@@ -39,16 +40,45 @@
 			</div>
 		</header>
 		
+		<!-- 메인 메뉴 영역 S -->
 		<nav>
-			<ul>
+			<ul class='layout_width'>
+				<li class='more_menu'>
+					<i class='xi-bars'></i>
+				</li>
 				<li>
-					<a href='#'>상업공간</a>
+					<a href='https://www.naver.com'>상업공간</a>
 				</li>
 				<li>
 					<a href='#'>전동시스템</a>
 				</li>
+				<li>
+					<a href='#'>커튼</a>
+				</li>
+				<li>
+					<a href='#'>블라인드</a>
+				</li>	
+				<li>
+					<a href='#'>침구</a>
+				</li>	
+				<li>
+					<a href='#'>리빙데코</a>
+				</li>	
+				<li>
+					<a href='#'>단독 SALE</a>
+				</li>	
+				<li>
+					<a href='#'>무료방문견적</a>
+				</li>	
+				<li>
+					<a href='#'>커뮤니티</a>
+				</li>	
+				<li>
+					<a href='#'>고객후기</a>
+				</li>	
 			</ul>
 		</nav>
+		<!-- 메인 메뉴 영역 E -->
 		
 		<section>
 		
