코지샵 퍼블리싱 + CSS 학습

--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset='utf-8'>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<script src="js/script.js"></script>
 		<title>코지샵 공식 온라인스토어</title>
 	</head>
@@ -80,9 +82,28 @@
 		</nav>
 		<!-- 메인 메뉴 영역 E -->
 		
-		<section>
-		
+		<!-- 메인 배너 영역 S -->
+		<section class='main_banner'>
+			 <!-- Swiper -->
+			<div class="swiper-container mySwiper">
+			  <div class="swiper-wrapper">
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+				<div class="swiper-slide"></div>
+			  </div>
+			  <div class="swiper-button-next"></div>
+			  <div class="swiper-button-prev"></div>
+			  <div class="swiper-pagination"></div>
+			</div>
 		</section>
+		<!-- 메인 배너 영역 E -->
+		
 		<footer></footer>
 	</body>
 </html>
