--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -97,8 +97,10 @@
 				<div class="swiper-slide"></div>
 				<div class="swiper-slide"></div>
 			  </div>
-			  <div class="swiper-button-next"></div>
-			  <div class="swiper-button-prev"></div>
+				
+			 <i class='xi-angle-left navi prev'></i>
+			 <i class='xi-angle-right navi next'></i>
+			  
 			  <div class="swiper-pagination"></div>
 			</div>
 		</section>
