--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -13,9 +13,9 @@
 		<header>
 			<div class='site_top'>
 				<div class='layout_width'>
-					<a href='#'>JOIN</a> | 
-					<a href='#'>CART</a> | 
-					<a href='#'>ORDER</a> | 
+					<a href='#' class='first'>JOIN</a>
+					<a href='#'>CART</a>
+					<a href='#'>ORDER</a>
 					<a href='#'>전자공고</a>
 				</div>
 			</div>
@@ -302,6 +302,12 @@
 				
 			</section>
 			<!-- 상품 진열 영역 E -->
+			
+			<!-- 상품 소개 배너 S -->
+			<section class='main_intro_banner'>
+			
+			</section>
+			<!-- 상품 소개 배너 E -->
 			
 		</main>
 		
