--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -305,7 +305,12 @@
 			
 			<!-- 상품 소개 배너 S -->
 			<section class='main_intro_banner'>
-			
+				<div class='box goods_desc'>
+				
+				</div>
+				<div class='box banner'>
+				
+				</div>
 			</section>
 			<!-- 상품 소개 배너 E -->
 			
