--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -328,6 +328,52 @@
 			</section>
 			<!-- 상품 소개 배너 E -->
 			
+			<!-- TV & Movie S -->
+			<section class='tv_movie'>
+				<article>
+					<div class='mtit'><span>TV&amp;MOVIE</span></div>
+					<div class='stit'>영화 및 드라마 협찬 러브콜 1순위 코지샵</div>
+					<div class='spread_bar'></div>
+					
+					<!-- Swiper -->
+					<div class="swiper-container mySwiper">
+					  <div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src='img/movie1.jpg'>
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie2.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie3.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src='img/movie1.jpg'>
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie2.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie3.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src='img/movie1.jpg'>
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie2.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img src="img/movie3.jpg">
+						</div>
+					  </div>
+					  <div class="swiper-pagination"></div>
+					  <i class='xi-angle-left navi prev'></i>
+					  <i class='xi-angle-right navi next'></i>
+					</div>
+					
+				</article>
+			</section>
+			<!-- TV & Movie E -->
 		</main>
 		
 		<footer></footer>
