--- a/퍼블리싱/cozyshop/index.html
+++ b/퍼블리싱/cozyshop/index.html
@@ -376,6 +376,47 @@
 			<!-- TV & Movie E -->
 		</main>
 		
-		<footer></footer>
+		<footer>
+			<div class='customer_service_info'>
+				<div class='info layout_width'>
+					<div class='box box1'>
+						<div class='text1'>CUSTOMER SERVICE</div>
+						<div class='text2'>1688 - 4564</div>
+					</div>
+					<div class='box box2'>
+						<div class='text3'>
+							월요일 - 토요일 09:00 - 18:00 (점심시간 11:50 - 13:00)<br>
+							일요일 및 공휴일은 1:1게시판을 이용해 주세요
+						</div>
+					</div>
+					<div class='box box3'>
+						<a href='#' class='btn'>1:1문의하기</a>
+						<a href='#' class='btn'>공사 및 도매문의</a>
+					</div>
+					<div class='box box4'>
+						<div class='text1'>BANK INFO</div>
+						<div class='text2'>062-126853-04012</div>
+					</div>
+					<div class='box box5'>
+						<div class='text4'>
+							기업은행 &nbsp;&nbsp;
+							예금주 | 주식회사 코지샵
+						</div>
+						<div class='text5'>
+							본사는 위 계좌이외에 타 계좌번호를 사용하지 않습니다.
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--// customer_service_info -->
+			
+			<div class='side_guide'>
+				
+			</div>
+			
+			<div class='company_info'>
+				
+			</div>
+		</footer>
 	</body>
 </html>
